src/yaml/kube-oidc-proxy/kop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-oidc-proxy
spec:
  type: ClusterIP
  ports:
  - name: kube-oidc-proxy
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    name: kube-oidc-proxy
